syntax = "proto3";

package greet;
option go_package= "greetpb";

message Greeting {
    string first_name = 1;
    string second_name = 2;
}

message GreetRequest {
	Greeting greeting = 1;
}

message GreetResponse {
	string Result = 1;
}

message GreetManyTimesRequest {
	Greeting greeting = 1;
}

message GreetManyTimesResponse {
	string Result = 1;
}

message LongGreetRequest {
	Greeting greeting = 1;
}

message LongGreetResponse {
	string Result = 1;
}

message GreetEveryoneRequest {
	Greeting greeting = 1;
}

message GreetEveryoneResponse {
	string Result = 1;
}

service GreetService {
    //Unary
	rpc Greet(GreetRequest) returns (GreetResponse) {};

    // Server Streaming
	rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

	// Client streaming
	rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};

	//biDi streaming
	rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};
}